--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -40,6 +40,5 @@ jobs:
           git config user.name 'TheDayIsMyEnemy'
           git config user.email 'TheDayIsMyEnemy@users.noreply.github.com'
           git checkout -b new-repo
-          git add -A
-          git commit -m "Update project structure"
+          git commit -am "Update project structure"
           git push -u origin new-repo
