--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -33,14 +33,16 @@ jobs:
           echo "Contents before renaming:"
           ls -R
 
-          find . ! -path . -name '.*' -prune -o -type d -exec bash -c 'echo "Renaming directory: {} to $(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \; -exec bash -c 'mv "{}" "$(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \;
+          # Renaming directories
+          find src -type d -name 'BlazorTemplate*' -exec bash -c 'echo "Renaming directory: {} to $(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \; -exec bash -c 'mv "{}" "$(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \;
 
-          find . ! -path . -name '.*' -prune -o -type f \( -name '*.cs' -o -name '*.csproj' -o -name '*.sln' \) -exec bash -c 'echo "Renaming file: {} to $(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \; -exec bash -c 'mv "{}" "$(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \;
+          # Renaming files
+          find src -type f \( -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.razor' -o -name '*.cshtml' -o -name '*.md' \) -exec bash -c 'echo "Renaming file: {} to $(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \; -exec bash -c 'mv "{}" "$(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \;
 
           echo "Contents after renaming:"
           ls -R
 
-          find . -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec bash -c 'echo "Updating content in file: {}"' \; -exec sed -i ${{ steps.repo_name.outputs.pattern }} {} +
+          find src -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec bash -c 'echo "Updating content in file: {}"' \; -exec sed -i ${{ steps.repo_name.outputs.pattern }} {} +
 
           rm .github/workflows/configure-new-repo.yml
           echo "Contents after removing workflow file:"
