--- a/.github/workflows/configure-new-repo.yml
+++ b/.github/workflows/configure-new-repo.yml
@@ -1,62 +1,54 @@
 name: Configure new repo
+
 on:
   push:
     branches:
       - main
 
-permissions:
-  actions: write
-  checks: write
-  contents: write
-  pull-requests: write
-  deployments: write
-  issues: read
-  statuses: read
-
 jobs:
-  configure-new-repo:
+  update-files:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set repository name
-        id: repo_name
-        run: |
-            echo "::set-output name=name::${{ github.event.repository.name }}"
-            echo "::set-output name=pattern::s/BlazorTemplate/${{ github.event.repository.name }}/g"
-            echo "Repository Name: ${{ steps.repo_name.outputs.name }}"
-            echo "Pattern: ${{ steps.repo_name.outputs.pattern }}"
+    - name: Set up Git
+      run: |
+        git config --global user.email "thedayismyenemy@users.github.no-reply.com"
+        git config --global user.name "thedayismyenemy"
 
-      - name: Update project structure
-        run: |
-          ls src -l
-          echo "Contents before renaming:"
-          ls -R
+    - name: Update project structure
+      run: |
+        old_name='BlazorTemplate'
+        new_name=${{ github.event.repository.name }}
+        find . -maxdepth 2 -type d -name "$old_name*" -exec bash -c 'mv "{}" "$(echo "{}" | sed -e "s/'"${old_name}"'/'"${new_name}"'/")"' \;
+        find . -maxdepth 5 -type f \( -name '*.sln' -o -name '*.csproj' -o -name '*.cshtml' -o -name '*.razor' -o -name '*.cs' -o -name '*.md' \) -exec bash -c 'mv "{}" "$(echo "{}" | sed -e "s/'"${old_name}"'/'"${new_name}"'/")"' \;
+        find . -type f \( -name '*.sln' -o -name '*.csproj' -o -name '*.cshtml' -o -name '*.razor' -o -name '*.cs' -o -name '*.md' \) -exec sed -i "s/$old_name/$new_name/g" {} +
+        rm .github/workflows/configure-new-repo.yml
+        git add -A
+        git commit -m "Update project structure"
+        git push
 
-          # Renaming directories
-          find . -type d -name 'BlazorTemplate*' -exec bash -c 'echo "Renaming directory: {} to $(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \; -exec bash -c 'mv "{}" "$(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \;
+    - name: Create Pull Request
+      id: cpr
+      uses: peter-evans/create-pull-request@v3
+      with:
+        title: "Update files and folders to match repository name"
+        labels: "auto-update"
+        branch: "main"
+        base: "main"
 
-          # Renaming files
-          find . -type f \( -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.razor' -o -name '*.cshtml' -o -name '*.md' \) -exec bash -c 'echo "Renaming file: {} to $(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \; -exec bash -c 'mv "{}" "$(echo "{}" | sed ${{ steps.repo_name.outputs.pattern }})"' \;
-
-          echo "Contents after renaming:"
-          ls -R
-
-          # Redirecting stderr to /dev/null to suppress error messages
-          find . -type f \( -name '*.razor' -o -name '*.cshtml' -o -name '*.cs' -o -name '*.csproj' -o -name '*.sln' -o -name '*.md' \) -exec bash -c 'echo "Updating content in file: {}"' \; -exec sed -i ${{ steps.repo_name.outputs.pattern }} {} + 2>/dev/null
-
-          rm .github/workflows/configure-new-repo.yml
-          echo "Contents after removing workflow file:"
-          ls -R
-
-      - name: Commit changes
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config user.name 'TheDayIsMyEnemy'
-          git config user.email 'TheDayIsMyEnemy@users.noreply.github.com'
-          git checkout -b new-repo
-          git add .
-          git status
-          git commit -m "Update project structure"
-          git push -u origin new-repo
+    - name: Close Pull Request
+      run: |
+        PR_NUMBER=$(echo "${{ steps.cpr.outputs.pull-request }}")
+        TOKEN=$GITHUB_TOKEN
+        COMMENT="Closing PR as completed. Thank you!"
+        curl -X POST -H "Authorization: Bearer $TOKEN" \
+          -H "Accept: application/vnd.github.v3+json" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/comments" \
+          -d "{\"body\":\"$COMMENT\",\"event\":\"COMMENT\"}"
+        curl -X PATCH -H "Authorization: Bearer $TOKEN" \
+          -H "Accept: application/vnd.github.v3+json" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER" \
+          -d "{\"state\":\"closed\"}"
