Update project structure

--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -6,11 +6,7 @@ on:
       - main
 
 permissions:
-  actions: write
-  checks: write
   contents: write
-  pull-requests: write
-  statuses: write
 
 jobs:
   configure-new-repo:
@@ -27,7 +23,8 @@ jobs:
           find . -maxdepth 2 -type d -name "$old_name*" -exec bash -c 'mv "{}" "$(echo "{}" | sed -e "s/'"${old_name}"'/'"${new_name}"'/")"' \;
           find . -maxdepth 5 -type f \( -name '*.sln' -o -name '*.csproj' -o -name '*.cshtml' -o -name '*.razor' -o -name '*.cs' -o -name '*.md' \) -exec bash -c 'mv "{}" "$(echo "{}" | sed -e "s/'"${old_name}"'/'"${new_name}"'/")"' \;
           find . -type f \( -name '*.sln' -o -name '*.csproj' -o -name '*.cshtml' -o -name '*.razor' -o -name '*.cs' -o -name '*.md' \) -exec sed -i "s/$old_name/$new_name/g" {} +
-          rm .github/workflows/configure-new-repo.yml
+          find . -type f \( -name '*.sln' \) -exec sed -i "s/TheDayIsMyEnemy/${{ github.actor }}/g" {} +
+          rm .github/workflows/template.yml
 
       - name: Commit changes
         run: |
