--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -9,7 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  configure-new-repo:
+  template:
     runs-on: ubuntu-latest
 
     if: ${{ github.event.created && github.repository != 'TheDayIsMyEnemy/BlazorTemplate' }}
