--- a/src/AdminDashboard/appsettings.Development.json
+++ b/src/AdminDashboard/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "BlazorTemplate": "server=localhost;port=1432;user=root;password=1234;database=BlazorTemplate",
-    "BlazorTemplate.Identity": "server=localhost;port=1432;user=root;password=1234;database=BlazorTemplate.Identity"
+    "AdminDashboard": "server=localhost;port=1432;user=root;password=1234;database=AdminDashboard",
+    "AdminDashboard.Identity": "server=localhost;port=1432;user=root;password=1234;database=AdminDashboard.Identity"
   },
   "DetailedErrors": true
 }
